--- a/index.html
+++ b/index.html
@@ -104,9 +104,46 @@
     <ol>
       <li>To mitigate language as a barrier and encourage regional outreach, MyGov has taken initiative for Content Localization through software in English and 11 Indian languages including {{localizationLanguages}}.</li>
       <li>MyGov has its presence in social media in English and 12 Indian languages i.e. in {{socialMediaLanguages}}, enabling citizens to stay updated in the given languages.</li>
+      <li>Below mentioned is the list of nationwide activities, including quizzes, contests, innovate activities, discussions and pledges which were organized by various Ministries within Government of India in collaboration with MyGov to engage citizens in promoting awareness and fostering civic responsibility. The activities aimed to encourage active participation from citizens, particularly youth, in shaping the nation's future, while commemorating significant events and social causes. With millions of participants across diverse platforms, these campaigns successfully contributed in engaging the public in meaningful dialogue. S. No.	Activity Name	Ministry / Department	User Participation Count till 2nd April 2025</li>
     </ol>
   </div>
 
+    <div class="section">
+    <h2>Activity Participation Details till 2nd April 2025</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>S. No.</th>
+          <th>Activity Name</th>
+          <th>Ministry / Department</th>
+          <th>User Participation Count</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>1</td><td></td><td>Ministry of AYUSH</td><td></td></tr>
+        <tr><td>2</td><td></td><td>C-DAC, MeitY</td><td></td></tr>
+        <tr><td>3</td><td></td><td>Mann ki Baat</td><td></td></tr>
+        <tr><td>4</td><td></td><td>ISEA, MeitY</td><td></td></tr>
+        <tr><td>5</td><td></td><td>Department of Science and Technology (DST)</td><td></td></tr>
+        <tr><td>6</td><td></td><td>Ministry of Chemical & Fertilizers</td><td></td></tr>
+        <tr><td>7</td><td></td><td>Ministry of Women and Child Development</td><td></td></tr>
+        <tr><td>8</td><td></td><td>Ministry of Women and Child Development</td><td></td></tr>
+        <tr><td>9</td><td></td><td>Ministry of AYUSH</td><td></td></tr>
+        <tr><td>10</td><td></td><td>Ministry of Commerce & Industry</td><td></td></tr>
+        <tr><td>11</td><td></td><td>Ministry of Education</td><td></td></tr>
+        <tr><td>12</td><td></td><td>Central Cottage Industries Corporation of India Ltd.</td><td></td></tr>
+        <tr><td>13</td><td></td><td>Ministry of Housing and Urban Affairs</td><td></td></tr>
+        <tr><td>14</td><td></td><td>Ministry of Textiles</td><td></td></tr>
+        <tr><td>15</td><td></td><td>Ministry of Women and Child Development</td><td></td></tr>
+        <tr><td>16</td><td></td><td>Ministry of Home Affairs</td><td></td></tr>
+        <tr><td>17</td><td></td><td>NIC, MeitY</td><td></td></tr>
+        <tr><td>18</td><td></td><td>Ministry of Health and Family Welfare</td><td></td></tr>
+        <tr><td>19</td><td></td><td>Ministry of Education</td><td></td></tr>
+        <tr><td>20</td><td></td><td>Ministry of AYUSH</td><td></td></tr>
+        <tr><td>21</td><td></td><td>Ministry of Youth Affairs & Sports</td><td></td></tr>
+      </tbody>
+    </table>
+  </div>
   <!-- Placeholder replacement script -->
   <script>
     window.addEventListener('DOMContentLoaded', () => {
